Fix Bug 373256 - "Delete duplicate messages" feature does not work

FIXED-IN: 5.4.2
BUG: 373256