src/job/removeduplicatemailjob.cpp
@@ -76,7 +76,7 @@ void RemoveDuplicateMailJob::slotRemoveDuplicatesDone(KJob *job)
         item->setStatus(i18n("Done"));
         item = Q_NULLPTR;
     }
-    if (job && (job->error() != KJob::KilledJobError)) {
+    if (job && job->error()) {
         KMessageBox::error(mParent, job->errorText(), i18n("Error while removing duplicates"));
     }
     deleteLater();
